--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <!-- <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script> -->
-    <!-- <meta name="google-adsense-account" content="ca-pub-9175978622625802"> -->
 </head>
 
 <body>
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#!">Start Bootstrapingggggggggggggg</a>
+            <a class="navbar-brand" href="#!">New Technology Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -42,47 +40,31 @@
             </div>
         </div>
     </header>
-    <!-- <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-9175978622625802" data-ad-slot="7997713741"
-        data-auto-format="rspv" data-full-width="">
-        <div overflow=""></div>
-    </amp-ad> -->
-    <div>
-        <p>&nbsp;</p>
-        <div id="ad-container"
-            style="border: none; height: 600px; width: 600px; margin: 0px; padding: 0px; position: relative; visibility: visible; background-color: transparent; display: inline-block; overflow: visible;"
-            tabindex="0" title="Advertisement" aria-label="Advertisement">
-            <iframe data-google-container-id="a!2" data-load-complete="true" frameborder="0" height="300" id="ad-iframe"
-                marginheight="0" marginwidth="0" name="ad-iframe"
-                sandbox="allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation"
-                scrolling="no" src="https://googleads.g.doubleclick.net/pagead/ads?client=ca-pub-9175978622625802&amp;"
-                style="border: 0; height: 300px; left: 0; position: absolute; top: 0; width: 600px;" width="600"><span
-                    data-mce-type="bookmark"
+    <p>&nbsp;</p>
+    <div id="ad-container"
+        style="border: none; height: 600px; width: 600px; margin: 0px; padding: 0px; position: relative; visibility: visible; background-color: transparent; display: inline-block; overflow: visible;"
+        tabindex="0" title="Advertisement" aria-label="Advertisement">
+        <iframe data-google-container-id="a!2" data-load-complete="true" frameborder="0" height="300" id="ad-iframe"
+            marginheight="0" marginwidth="0" name="ad-iframe"
+            sandbox="allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation"
+            scrolling="no"
+            src="https://googleads.g.doubleclick.net/pagead/ads?client=ca-pub-4192314544088856&amp;output=html&amp;adk=8486278884&amp;adf=8486278884&amp;lmt=1705043566&amp;w=600&amp;rafmt=11&amp;format=600x300&amp;url=https://gamepix.com/&amp;host=ca-host-pub-8435989769185680&amp;"
+            style="border: 0; height: 300px; left: 0; position: absolute; top: 0; width: 600px;" width="600"><span
+                data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
+                class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
+                style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
+                class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
+                style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
+                class="mce_SELRES_start"><span data-mce-type="bookmark"
                     style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                    class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
+                    class="mce_SELRES_start">?</span>?</span><span data-mce-type="bookmark"
+                style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
+                class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
+                style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
+                class="mce_SELRES_start"><span data-mce-type="bookmark"
                     style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                    class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
-                    style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                    class="mce_SELRES_start"><span data-mce-type="bookmark"
-                        style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                        class="mce_SELRES_start">?</span>?</span><span data-mce-type="bookmark"
-                    style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                    class="mce_SELRES_start">?</span><span data-mce-type="bookmark"
-                    style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                    class="mce_SELRES_start"><span data-mce-type="bookmark"
-                        style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;"
-                        class="mce_SELRES_start">?</span>?</span>
-            </iframe>
-        </div>
-        <!-- <script async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4192314544088856"
-            crossorigin="anonymous"></script> -->
-
-        <!-- horizontal -->
-        <!-- <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4192314544088856"
-            data-ad-slot="9506236531" data-ad-format="auto" data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script> -->
+                    class="mce_SELRES_start">?</span>?</span>
+        </iframe>
     </div>
     <!-- Page content-->
     <div class="container">
